Set overflow for collection container Issue:74702

--- a/src/components/collection/collection.scss
+++ b/src/components/collection/collection.scss
@@ -27,6 +27,7 @@
 .CollectionContainer {
   background-color: transparent;  
   width: 100%;
+  overflow-y: auto;
 }
 
 .ItemsRender
